crates/solverforge-macros/tests/ui/fail/index_shadow_non_usize.rs
use solverforge::prelude::*;

#[planning_entity]
pub struct Visit {
    #[planning_id]
    pub id: usize,

    #[index_shadow_variable(source_variable_name = "visits")]
    pub index: usize,
}

fn main() {}
